# Arrow_Schema_JSON_conversion

./: CMakeLists.txt  Dockerfile  README.md  build.sh  compile_commands.json  run_cppcheck.sh
include/: Schema_JSON_Conversion.h
src/: DataTypes.h  IDataType.h  Json_To_Schema.cpp  Schema_JSON_Conversion.cpp  Schema_JSON_Conversion.h  Schema_To_Json.cpp
test/: helper.h  test.cpp
